--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "carlos portafolio",
+    "name": "carlos_portafolio",
     "version": "1.0.0",
     "private": true,
     "dependencies": {
