--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@emotion/core": "^10.0.28",
         "@emotion/styled": "^10.0.27",
         "classnames": "2.2.6",
+        "formik": "^2.1.4",
         "moment": "2.24.0",
         "node-sass": "4.12.0",
         "nouislider": "13.1.5",
@@ -16,7 +17,8 @@
         "react-router": "5.0.1",
         "react-router-dom": "5.0.1",
         "react-scripts": "3.0.1",
-        "reactstrap": "8.0.0"
+        "reactstrap": "8.0.0",
+        "yup": "^0.28.5"
     },
     "scripts": {
         "start": "react-scripts start",
