--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "dependencies": {
         "@emotion/core": "^10.0.28",
         "@emotion/styled": "^10.0.27",
+        "bootstrap": "^4.5.0",
         "classnames": "2.2.6",
         "formik": "^2.1.4",
         "moment": "2.24.0",
         "node-sass": "4.12.0",
         "nouislider": "13.1.5",
         "react": "16.8.6",
+        "react-bootstrap": "^1.0.1",
         "react-bootstrap-switch": "15.5.3",
         "react-datetime": "2.16.3",
         "react-dom": "16.8.6",
